test/trivial/deitz/test_use_before_def2.chpl
proc foo() {
  writeln(x);
  var x : int = 12;
}
foo();
